tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/key/escape.stderr
TOML parse error at line 1, column 1
  |
1 | \u00c0 = "latin capital letter A with grave"
  | ^
invalid key
